add animated texts

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/ssr": "^0.5.2",
+    "aceternity-ui": "^0.2.2",
     "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "openai": "^4.72.0",
