--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@redux-devtools/extension": "^3.3.0",
     "@supabase/ssr": "^0.5.2",
+    "@types/pdf-parse": "^1.1.4",
     "aceternity-ui": "^0.2.2",
     "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "openai": "^4.72.0",
+    "pdf-parse": "^1.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.4",
