--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@ai-sdk/openai": "^0.0.72",
     "@clerk/nextjs": "^6.3.4",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@redux-devtools/extension": "^3.3.0",
     "@supabase/ssr": "^0.5.2",
+    "@tiptap/extension-link": "^2.10.2",
+    "@tiptap/extension-underline": "^2.10.2",
+    "@tiptap/react": "^2.10.2",
+    "@tiptap/starter-kit": "^2.10.2",
     "@types/pdf-parse": "^1.1.4",
     "aceternity-ui": "^0.2.2",
     "ai": "^3.4.33",
